--- a/butterfly-home-cleaning/src/app.css
+++ b/butterfly-home-cleaning/src/app.css
@@ -9,6 +9,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: .5rem;
+    margin-left: .6rem;
+    margin-right: .6rem;
     /* background-color: #EEEDE8; */
-    
+   
   }
